Added the sound
